// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`パイプ 1 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"NumberLiteral\\": [
                                                      {
                                                        \\"image\\": \\"1\\",
                                                        \\"startOffset\\": 5,
                                                        \\"endOffset\\": 5,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 5,
                                                        \\"endColumn\\": 5,
                                                        \\"tokenTypeIdx\\": 4,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"NumberLiteral\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 4,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"PipeToken\\": [
                        {
                          \\"image\\": \\"|>\\",
                          \\"startOffset\\": 7,
                          \\"endOffset\\": 8,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 7,
                          \\"endColumn\\": 8,
                          \\"tokenTypeIdx\\": 34,
                          \\"tokenType\\": {
                            \\"name\\": \\"PipeToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 34,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"toIdentifier\\": [
                        {
                          \\"image\\": \\"console\\",
                          \\"startOffset\\": 10,
                          \\"endOffset\\": 16,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 10,
                          \\"endColumn\\": 16,
                          \\"tokenTypeIdx\\": 8,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 8,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`パイプ 2 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"NumberLiteral\\": [
                                                      {
                                                        \\"image\\": \\"1\\",
                                                        \\"startOffset\\": 5,
                                                        \\"endOffset\\": 5,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 5,
                                                        \\"endColumn\\": 5,
                                                        \\"tokenTypeIdx\\": 4,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"NumberLiteral\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 4,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          },
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"NumberLiteral\\": [
                                                      {
                                                        \\"image\\": \\"1\\",
                                                        \\"startOffset\\": 9,
                                                        \\"endOffset\\": 9,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 9,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 4,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"NumberLiteral\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 4,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ],
                                        \\"AdditionOperator\\": [
                                          {
                                            \\"image\\": \\"+\\",
                                            \\"startOffset\\": 7,
                                            \\"endOffset\\": 7,
                                            \\"startLine\\": 2,
                                            \\"endLine\\": 2,
                                            \\"startColumn\\": 7,
                                            \\"endColumn\\": 7,
                                            \\"tokenTypeIdx\\": 18,
                                            \\"tokenType\\": {
                                              \\"name\\": \\"Plus\\",
                                              \\"PATTERN\\": {},
                                              \\"CATEGORIES\\": [
                                                {
                                                  \\"name\\": \\"AdditionOperator\\",
                                                  \\"PATTERN\\": {},
                                                  \\"tokenTypeIdx\\": 17,
                                                  \\"CATEGORIES\\": [],
                                                  \\"categoryMatches\\": [
                                                    18,
                                                    19
                                                  ],
                                                  \\"categoryMatchesMap\\": {
                                                    \\"18\\": true,
                                                    \\"19\\": true
                                                  },
                                                  \\"isParent\\": true
                                                }
                                              ],
                                              \\"tokenTypeIdx\\": 18,
                                              \\"categoryMatches\\": [],
                                              \\"categoryMatchesMap\\": {},
                                              \\"isParent\\": false
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"PipeToken\\": [
                        {
                          \\"image\\": \\"|>\\",
                          \\"startOffset\\": 11,
                          \\"endOffset\\": 12,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 34,
                          \\"tokenType\\": {
                            \\"name\\": \\"PipeToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 34,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"toIdentifier\\": [
                        {
                          \\"image\\": \\"console\\",
                          \\"startOffset\\": 14,
                          \\"endOffset\\": 20,
                          \\"startLine\\": 2,
                          \\"endLine\\": 2,
                          \\"startColumn\\": 14,
                          \\"endColumn\\": 20,
                          \\"tokenTypeIdx\\": 8,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 8,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`パイプ 3 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 5,
                    \\"endOffset\\": 9,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 9,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 11,
                    \\"endOffset\\": 12,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 11,
                    \\"endColumn\\": 12,
                    \\"tokenTypeIdx\\": 37,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 37,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"StringLiteral\\": [
                                                      {
                                                        \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                        \\"startOffset\\": 14,
                                                        \\"endOffset\\": 19,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 14,
                                                        \\"endColumn\\": 19,
                                                        \\"tokenTypeIdx\\": 3,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"StringLiteral\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 3,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"Identifier\\": [
                                                      {
                                                        \\"image\\": \\"value\\",
                                                        \\"startOffset\\": 25,
                                                        \\"endOffset\\": 29,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 5,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 8,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Identifier\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 8,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"PipeToken\\": [
                        {
                          \\"image\\": \\"|>\\",
                          \\"startOffset\\": 31,
                          \\"endOffset\\": 32,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 34,
                          \\"tokenType\\": {
                            \\"name\\": \\"PipeToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 34,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"toIdentifier\\": [
                        {
                          \\"image\\": \\"console\\",
                          \\"startOffset\\": 34,
                          \\"endOffset\\": 40,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 14,
                          \\"endColumn\\": 20,
                          \\"tokenTypeIdx\\": 8,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 8,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`パイプ 4 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 5,
                    \\"endOffset\\": 9,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 5,
                    \\"endColumn\\": 9,
                    \\"tokenTypeIdx\\": 8,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 8,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 11,
                    \\"endOffset\\": 12,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 11,
                    \\"endColumn\\": 12,
                    \\"tokenTypeIdx\\": 37,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 37,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"StringLiteral\\": [
                                                      {
                                                        \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                        \\"startOffset\\": 14,
                                                        \\"endOffset\\": 19,
                                                        \\"startLine\\": 2,
                                                        \\"endLine\\": 2,
                                                        \\"startColumn\\": 14,
                                                        \\"endColumn\\": 19,
                                                        \\"tokenTypeIdx\\": 3,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"StringLiteral\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 3,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToRight\\": [
            {
              \\"name\\": \\"ToRight\\",
              \\"children\\": {
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"from\\": [
                        {
                          \\"name\\": \\"PipeFrom\\",
                          \\"children\\": {
                            \\"RelationExpression\\": [
                              {
                                \\"name\\": \\"RelationExpression\\",
                                \\"children\\": {
                                  \\"Expression\\": [
                                    {
                                      \\"name\\": \\"Expression\\",
                                      \\"children\\": {
                                        \\"Term\\": [
                                          {
                                            \\"name\\": \\"Term\\",
                                            \\"children\\": {
                                              \\"Factor\\": [
                                                {
                                                  \\"name\\": \\"Factor\\",
                                                  \\"children\\": {
                                                    \\"Identifier\\": [
                                                      {
                                                        \\"image\\": \\"value\\",
                                                        \\"startOffset\\": 25,
                                                        \\"endOffset\\": 29,
                                                        \\"startLine\\": 3,
                                                        \\"endLine\\": 3,
                                                        \\"startColumn\\": 5,
                                                        \\"endColumn\\": 9,
                                                        \\"tokenTypeIdx\\": 8,
                                                        \\"tokenType\\": {
                                                          \\"name\\": \\"Identifier\\",
                                                          \\"PATTERN\\": {},
                                                          \\"tokenTypeIdx\\": 8,
                                                          \\"CATEGORIES\\": [],
                                                          \\"categoryMatches\\": [],
                                                          \\"categoryMatchesMap\\": {},
                                                          \\"isParent\\": false
                                                        }
                                                      }
                                                    ]
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ],
                      \\"PipeToken\\": [
                        {
                          \\"image\\": \\"|>\\",
                          \\"startOffset\\": 31,
                          \\"endOffset\\": 32,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 11,
                          \\"endColumn\\": 12,
                          \\"tokenTypeIdx\\": 34,
                          \\"tokenType\\": {
                            \\"name\\": \\"PipeToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 34,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        },
                        {
                          \\"image\\": \\"|>\\",
                          \\"startOffset\\": 42,
                          \\"endOffset\\": 43,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 22,
                          \\"endColumn\\": 23,
                          \\"tokenTypeIdx\\": 34,
                          \\"tokenType\\": {
                            \\"name\\": \\"PipeToken\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 34,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ],
                      \\"toIdentifier\\": [
                        {
                          \\"image\\": \\"console\\",
                          \\"startOffset\\": 34,
                          \\"endOffset\\": 40,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 14,
                          \\"endColumn\\": 20,
                          \\"tokenTypeIdx\\": 8,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 8,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        },
                        {
                          \\"image\\": \\"console\\",
                          \\"startOffset\\": 45,
                          \\"endOffset\\": 51,
                          \\"startLine\\": 3,
                          \\"endLine\\": 3,
                          \\"startColumn\\": 25,
                          \\"endColumn\\": 31,
                          \\"tokenTypeIdx\\": 8,
                          \\"tokenType\\": {
                            \\"name\\": \\"Identifier\\",
                            \\"PATTERN\\": {},
                            \\"tokenTypeIdx\\": 8,
                            \\"CATEGORIES\\": [],
                            \\"categoryMatches\\": [],
                            \\"categoryMatchesMap\\": {},
                            \\"isParent\\": false
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
